TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_after.dot
digraph AST {
  "126076286437456" [label="Start"];
  "126076286437456" -> "126076286442112";
  "126076286442112" [label="Code"];
  "126076286442112" -> "126076286442160";
  "126076286442160" [label="Function"];
  "126076286442160" -> "126076286442256";
  "126076286442160" -> "126076286442304";
  "126076286442160" -> "126076286442352";
  "126076286442256" [label="main IDENTIFIER"];
  "126076286442304" [label="Parameters"];
  "126076286442352" [label="Code"];
  "126076286442352" -> "126076286442448";
  "126076286442352" -> "126076286442496";
  "126076286442352" -> "126076286442592";
  "126076286442448" [label="Code"];
  "126076286442448" -> "126076286442544";
  "126076286442544" [label="Declaration"];
  "126076286442544" -> "126076286442640";
  "126076286442544" -> "126076286442688";
  "126076286442640" [label="x IDENTIFIER"];
  "126076286442688" [label="1 INT"];
  "126076286442496" [label="Code"];
  "126076286442496" -> "126076286442736";
  "126076286442736" [label="Declaration"];
  "126076286442736" -> "126076286442832";
  "126076286442736" -> "126076286442880";
  "126076286442832" [label="x IDENTIFIER"];
  "126076286442880" [label="2 INT"];
  "126076286442592" [label="Return"];
  "126076286442592" -> "126076286442928";
  "126076286442928" [label="0 INT"];
}
